# static-regular-grammar

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: iri.rs  test.abnf  test.rs  uri.rs
src/: attribute.rs  byteset.rs  charset.rs  grammar.rs  lib.rs  options.rs  token.rs  utils.rs
src/grammar/: abnf.rs
src/token/: byte.rs  char.rs
src/utils/: automaton.rs  case.rs  scc.rs
